--- a/musavir_app/public/assets/auth/css/profile.css
+++ b/musavir_app/public/assets/auth/css/profile.css
@@ -17,3 +17,10 @@ width: 100%;
 max-width: 500px;
 padding: 20px;
 }
+
+
+.avatar-display img {
+width: 200px;
+height: 200px;
+object-fit: cover;
+}
